--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -8,6 +8,15 @@
     
     <!-- addingg external CSS for div-->
     <link rel="stylesheet" href="styles.css">
+
+    <!-- adding internal CSS for paragraph -->
+    <style>
+      p {
+        color: white;
+        background-color: green;
+        font-size: 18px;
+      }
+    </style>
   </head>
   <body>
     <div>Style me via the external method!</div>
