--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -21,6 +21,8 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+
+    <!-- Adding inline CSS to button -->
+    <button style="color:white; background-color: orange; font-size: 18px;">Inline Method</button>
   </body>
 </html>
